fixed header gap project show

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -39,7 +39,6 @@ text-alifgn: center;
 
 
 #showTitle{
-  margin-top: 80%;
   bottom:0px;
   text-align: bottom;
 }
